--- a/src/main/resources/views/SendFriendRequestView.fxml
+++ b/src/main/resources/views/SendFriendRequestView.fxml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="views.SendFriendRequestView"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="76.0" prefWidth="407.0" styleClass="dark-gray-background" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.company.sendFriendsRequestController">
+   <children>
+      <Text fill="WHITE" layoutX="28.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="username" wrappingWidth="84.73009872436523">
+         <font>
+            <Font name="Segoe Print" size="15.0" />
+         </font>
+      </Text>
+      <TextField fx:id="textField" layoutX="129.0" layoutY="26.0" prefHeight="26.0" prefWidth="206.0" stylesheets="@../style/style.css">
+         <styleClass>
+            <String fx:value="gray-background" />
+            <String fx:value="radius" />
+         </styleClass>
+      </TextField>
+      <Button layoutX="346.0" layoutY="21.0" mnemonicParsing="false" onAction="#onButton" prefHeight="26.0" prefWidth="46.0" styleClass="transparent-background" stylesheets="@../style/style.css">
+         <graphic>
+            <ImageView fitHeight="28.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/sendMessage@.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <Text fx:id="statusText" fill="#c9230d" layoutX="129.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="206.39999999999986">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Text>
+   </children>
 </AnchorPane>
