--- a/src/main/resources/views/SendFriendRequestView.fxml
+++ b/src/main/resources/views/SendFriendRequestView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="76.0" prefWidth="407.0" styleClass="dark-gray-background" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.company.sendFriendsRequestController">
+<AnchorPane prefHeight="76.0" prefWidth="407.0" styleClass="dark-gray-background" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.company.friends.sendFriendsRequestController">
    <children>
       <Text fill="WHITE" layoutX="28.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="username" wrappingWidth="84.73009872436523">
          <font>
