--- a/src/main/resources/views/ShowFriendsView.fxml
+++ b/src/main/resources/views/ShowFriendsView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -38,15 +39,24 @@
             <Font name="Arial" size="18.0" />
          </font>
       </Text>
-      <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="409.0" layoutY="90.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="188.0" layoutY="90.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/email.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="413.0" layoutY="126.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="20.0" fitWidth="20.0" layoutX="188.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/phoneCall.png" />
          </image>
       </ImageView>
+      <Button layoutX="410.0" layoutY="63.0" mnemonicParsing="false" onAction="#block" prefHeight="73.0" prefWidth="114.0" styleClass="transparent-background" stylesheets="@../style/style.css">
+         <graphic>
+            <ImageView fitHeight="62.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/block.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
