--- a/src/main/resources/views/PrivateChatView.fxml
+++ b/src/main/resources/views/PrivateChatView.fxml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.company.privateChat.PrivateChatController">
    <left>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="600.0" prefWidth="289.0" BorderPane.alignment="CENTER">
          <children>
             <VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="98.0" spacing="20.0" styleClass="dark-gray-background" stylesheets="@../style/style.css">
                <children>
@@ -67,7 +70,37 @@
                   <Insets />
                </HBox.margin>
             </VBox>
+            <ScrollPane fx:id="ScrollPaneFriends" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0">
+               <content>
+                  <VBox fx:id="vBoxFriends" alignment="TOP_CENTER" prefHeight="598.0" prefWidth="193.0" styleClass="gray-background" stylesheets="@../style/style.css" />
+               </content>
+            </ScrollPane>
          </children>
       </HBox>
    </left>
+   <right>
+      <AnchorPane prefHeight="600.0" prefWidth="610.0" BorderPane.alignment="CENTER">
+         <children>
+            <AnchorPane layoutX="-1.0" layoutY="532.0" prefHeight="68.0" prefWidth="612.0">
+               <children>
+                  <TextField fx:id="textField" layoutX="14.0" layoutY="21.0" prefHeight="26.0" prefWidth="514.0" styleClass="radius" stylesheets="@../style/style.css" />
+                  <Button layoutX="547.0" layoutY="18.0" mnemonicParsing="false" onAction="#sendButton" prefHeight="32.0" prefWidth="37.0" styleClass="transparent-background" stylesheets="@../style/style.css">
+                     <graphic>
+                        <ImageView fitHeight="20.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/sendMessage1.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
+            </AnchorPane>
+            <ScrollPane fx:id="chatScrollPane" hbarPolicy="NEVER" layoutX="1.0" prefHeight="538.0" prefWidth="610.0">
+               <content>
+                  <VBox fx:id="chatVBox" alignment="BOTTOM_RIGHT" prefHeight="536.0" prefWidth="608.0" />
+               </content>
+            </ScrollPane>
+         </children>
+      </AnchorPane>
+   </right>
 </BorderPane>
