--- a/src/main/resources/views/PrivateChatView.fxml
+++ b/src/main/resources/views/PrivateChatView.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -72,7 +72,7 @@
             </VBox>
             <ScrollPane fx:id="ScrollPaneFriends" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0">
                <content>
-                  <VBox fx:id="vBoxFriends" alignment="TOP_CENTER" prefHeight="598.0" prefWidth="193.0" styleClass="gray-background" stylesheets="@../style/style.css" />
+                  <VBox fx:id="vBoxFriends" alignment="TOP_CENTER" prefHeight="598.0" prefWidth="193.0" spacing="10.0" styleClass="gray-background" stylesheets="@../style/style.css" />
                </content>
             </ScrollPane>
          </children>
@@ -83,8 +83,7 @@
          <children>
             <AnchorPane layoutX="-1.0" layoutY="532.0" prefHeight="68.0" prefWidth="612.0">
                <children>
-                  <TextField fx:id="textField" layoutX="14.0" layoutY="21.0" prefHeight="26.0" prefWidth="514.0" styleClass="radius" stylesheets="@../style/style.css" />
-                  <Button layoutX="547.0" layoutY="18.0" mnemonicParsing="false" onAction="#sendButton" prefHeight="32.0" prefWidth="37.0" styleClass="transparent-background" stylesheets="@../style/style.css">
+                  <Button layoutX="529.0" layoutY="18.0" mnemonicParsing="false" onAction="#sendButton" prefHeight="32.0" prefWidth="37.0" styleClass="transparent-background" stylesheets="@../style/style.css">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -93,11 +92,21 @@
                         </ImageView>
                      </graphic>
                   </Button>
+                  <TextField fx:id="textField" layoutX="14.0" layoutY="21.0" prefHeight="26.0" prefWidth="502.0" />
+                  <Button layoutX="567.0" layoutY="22.0" mnemonicParsing="false" onAction="#clock" prefHeight="13.0" prefWidth="19.0" styleClass="transparent-background" stylesheets="@../style/style.css">
+                     <graphic>
+                        <ImageView fitHeight="22.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/clock.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
             </AnchorPane>
             <ScrollPane fx:id="chatScrollPane" hbarPolicy="NEVER" layoutX="1.0" prefHeight="538.0" prefWidth="610.0">
                <content>
-                  <VBox fx:id="chatVBox" alignment="BOTTOM_RIGHT" prefHeight="536.0" prefWidth="608.0" />
+                  <VBox fx:id="chatVBox" alignment="BOTTOM_RIGHT" prefHeight="536.0" prefWidth="594.0" />
                </content>
             </ScrollPane>
          </children>
