--- a/src/main/resources/views/ChannelSelectBox.fxml
+++ b/src/main/resources/views/ChannelSelectBox.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="100.0" prefWidth="160.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.company.groupChat.GroupSelectController">
+<AnchorPane prefHeight="100.0" prefWidth="160.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.company.groupChat.ChannelSelectController">
    <styleClass>
       <String fx:value="radius" />
       <String fx:value="dark-gray-background" />
    </styleClass>
    <children>
-      <Text fx:id="serverID" fill="WHITE" layoutX="21.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Group ID" textAlignment="CENTER" wrappingWidth="133.336669921875">
+      <Text fx:id="ChannelID" fill="WHITE" layoutX="21.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Group ID" textAlignment="CENTER" wrappingWidth="133.336669921875">
          <font>
             <Font name="Arial Bold Italic" size="19.0" />
          </font>
